이미지 불러오기 api 구현완료
