# config/swagger/postSwagger.yaml
@@ -228,7 +228,7 @@ paths:
           description: 게시글을 찾을 수 없음
         '500':
           description: 서버 오류
-  /api/image:
+  /api/image/{post_id}:
     post:
       tags:
         - Image
@@ -236,18 +236,41 @@ paths:
       consumes:
         - multipart/form-data # 문서 타입 지정
       parameters:
-        - in: formData
-          name: image
+        - name: post_id
+          in: path
+          required: true
+          description: '이미지 업로드할 게시글의 ID'
+          type: string
+        - name: image
+          in: formData
+          required: true
           type: file
-          description: 파일 업로드
-      # 아래 주석은 로그인 구현후 풀 것
-      # - in: formData
-      #   name: userId
-      #   type: integer
-      #   description: 사용자 아이디
+          description: '업로드할 이미지 파일'
+        # 아래 주석은 로그인 구현후 풀 것
+        # - in: formData
+        #   name: userId
+        #   type: integer
+        #   description: 사용자 아이디
       responses:
         '200':
           description: 이미지 업로드 완료!
+        '404':
+          description: 이미지를 찾을 수 없음
+        '500':
+          description: 서버 오류
+    get:
+      tags:
+        - Image
+      summary: 이미지 조회
+      parameters:
+        - name: post_id
+          in: path
+          required: true
+          description: '이미지 조회할 게시글의 ID'
+          type: string
+      responses:
+        '200':
+          description: 이미지 조회 완료!
         '500':
           description: 서버 오류
   /api/comments/{post_id}:
